# Quantum-Messaging

./: .gitignore  README.md  package-lock.json  package.json
.github/: copilot-instructions.md
app/: page.tsx
app/lib/: bb84.ts  crypto.ts  stellar.ts
smart-contract/: Cargo.toml
smart-contract/src/: lib.rs
