[package]
name = "quantum-message-registry"
version = "0.1.0"
edition = "2021"
description = "Soroban smart contract for quantum-secured message registry on Stellar"
license = "MIT"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[workspace]
members = ["."]

[workspace.dependencies]
soroban-sdk = "22.0.5"
